# wow-profit

./: .env.example  .gitignore  README.md  docker-compose.db.yml  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  item.py  price_snapshot.py  recipe.py  upload_log.py  watchlist.py
backend/app/routers/: __init__.py  crafting.py  deals.py  items.py  realms.py  trends.py  upload.py  watchlist.py
backend/app/schemas/: crafting.py  item.py
backend/app/services/: ingest_service.py  item_db_service.py  lua_parser_service.py  nexushub_service.py  pricing_service.py  seeding_service.py  tsm_service.py
backend/app/utils/: cache.py  gold.py
backend/scripts/: seed_items.py
data/: items.json  recipes.json
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: DataFreshnessPill.jsx  DealScanner.jsx  GoldDisplay.jsx  ItemTable.jsx  LoadingSpinner.jsx  PriceChart.jsx  RealmSelector.jsx  UploadZone.jsx  Watchlist.jsx
frontend/src/components/CraftingOptimizer/: BuyCraftToggle.jsx  CostSummaryBar.jsx  CraftingOptimizer.jsx  CraftingTreeNode.jsx  useCraftingTree.js
frontend/src/hooks/: useAHData.js  useDataFreshness.js  useItemSearch.js  useRealm.jsx
frontend/src/pages/: Crafting.jsx  Dashboard.jsx  Items.jsx  Trends.jsx  Upload.jsx  WatchlistPage.jsx
